--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@offset-dev/strapi-calendar": "^0.1.1",
     "@strapi/plugin-cloud": "4.25.1",
+    "@strapi/plugin-graphql": "^4.25.2",
     "@strapi/plugin-i18n": "4.25.1",
     "@strapi/plugin-users-permissions": "4.25.1",
     "@strapi/strapi": "4.25.1",
@@ -21,6 +22,10 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-custom-api": "^1.0.5",
+    "strapi-plugin-email-designer": "^2.2.1",
+    "strapi-plugin-entity-relationship-chart": "^4.14.6",
+    "strapi-plugin-import-export-entries": "^1.23.1",
     "styled-components": "5.3.3"
   },
   "author": {
